<resources>
    <string name="app_name">Game Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_players">Players</string>
    <string name="action_games">Games</string>
    <string name="title_activity_players">players</string>
    <string name="title_activity_games">games</string>
    <string name="title_activity_profile">profile</string>
    <string name="title_activity_new_player">new_player</string>
    <string name="title_activity_new_game">new_game</string>
    <string name="text_recent_winners">Recent Winners</string>
    <string name="text_top_players">Top Players</string>
    <string name="profile_points">Points</string>
    <string name="profile_rank">Rank</string>
    <string name="text_profile_second_place">2nd Place</string>
    <string name="text_third_place">3rd Place</string>
    <string name="edit_text">Edit</string>
    <string name="new_player_text">New Player</string>
    <string name="no_data_available">No data available. Add players and games to view this information.</string>
    <string name="no_players">No players available. Click the + icon to add a player!</string>
    <string name="no_games">No games available. Click the + icon to add a game!</string>
    <string name="notification_title">Log your game!</string>
    <string name="notification_text">Do not forget to log your game!</string>
</resources>
